Stope NumberFilter inputs from overflowing their container in “between” mode.

--- a/plugins/woocommerce-admin/packages/components/src/filters/advanced/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/filters/advanced/style.scss
@@ -173,9 +173,24 @@
 }
 
 .woocommerce-filters-advanced__input-numeric-range {
-	display: inline-block;
+	align-items: center;
+	display: grid;
+	grid-template-columns: 1fr;
+
+	&.is-between {
+		grid-template-columns: 1fr 36px 1fr;
+	}
 
 	input {
 		height: 38px;
+		margin: 0;
+	}
+
+	.separator {
+		padding: 0 8px;
+
+		@include breakpoint( '<782px' ) {
+			padding: 0;
+		}
 	}
 }
